--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
+    "react-calendar": "^6.0.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
     "react-webcam": "^7.2.0",
