--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "formik": "^2.4.6",
     "jspdf": "^3.0.1",
     "jwt-decode": "^4.0.0",
+    "opencv.js": "^1.2.1",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-calendar": "^6.0.0",
