--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/x-charts": "^8.5.0",
     "@mui/x-data-grid": "^8.5.0",
     "@reduxjs/toolkit": "^2.8.2",
+    "@stomp/stompjs": "^7.1.1",
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
@@ -32,6 +33,7 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
     "react-webcam": "^7.2.0",
+    "sockjs-client": "^1.6.1",
     "yup": "^1.7.0"
   },
   "devDependencies": {
