--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "bootstrap-icons": "^1.13.1",
     "face-api.js": "^0.22.2",
     "formik": "^2.4.6",
-    "jspdf": "^3.0.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
     "jwt-decode": "^4.0.0",
     "opencv.js": "^1.2.1",
     "react": "^19.1.0",
